// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Enum Reflection should compile basic enum: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Enumeration: BasicEnum

Defined in: [enums.ts:1](http://source-url)

Comments for enum

## Enumeration Members

### MemberA

> **MemberA**: \`0\`

Defined in: [enums.ts:1](http://source-url)

Comments for MemberA

***

### MemberB

> **MemberB**: \`1\`

Defined in: [enums.ts:1](http://source-url)

Comments for MemberB
"
`;

exports[`Enum Reflection should compile basic enum: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Enumeration: BasicEnum

Defined in: [enums.ts:1](http://source-url)

Comments for enum

## Enumeration Members

| Enumeration Member | Value | Description |
| :------ | :------ | :------ |
| <a id="membera"></a> \`MemberA\` | \`0\` | Comments for MemberA |
| <a id="memberb"></a> \`MemberB\` | \`1\` | Comments for MemberB |
"
`;

exports[`Enum Reflection should compile enum with values: (Output File Strategy "members") (Option Group "1") 1`] = `
"# Enumeration: EnumWithValues

Defined in: [enums.ts:1](http://source-url)

Comments for enum

## Enumeration Members

### MemberA

> **MemberA**: \`"UP"\`

Defined in: [enums.ts:1](http://source-url)

***

### MemberB

> **MemberB**: \`"DOWN"\`

Defined in: [enums.ts:1](http://source-url)
"
`;

exports[`Enum Reflection should compile enum with values: (Output File Strategy "members") (Option Group "2") 1`] = `
"# Enumeration: EnumWithValues

Defined in: [enums.ts:1](http://source-url)

Comments for enum

## Enumeration Members

| Enumeration Member | Value |
| :------ | :------ |
| <a id="membera"></a> \`MemberA\` | \`"UP"\` |
| <a id="memberb"></a> \`MemberB\` | \`"DOWN"\` |
"
`;
